--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fblthp-lost-game",
-  "homepage": "http://coopthompson.github.io/fblthp-lost-game",
+  "homepage": "https://fblthp-lost.web.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +17,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
